--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/vendors/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css">
-    <link rel="stylesheet" type="text/css" href="/vendors/css/flaticon.css">
-    <link rel="stylesheet" type="text/css" href="/resources/css/ionicons.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/ionicons.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>CHEF'D</title> 
 </head>
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="row">
-                <img src="/resources/img/chefd-logo2.png" alt="CHEF'D logo image">
+                <img src="resources/img/chefd-logo2.png" alt="CHEF'D logo image">
                 <ul>
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">Meal Plans</a></li>
@@ -60,47 +60,7 @@
             </div>
         </div>
     </section>
-    <section class="chefs-gallery">
-        <div class="row">
-            <h2>Featuring recipes from</h2>
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo3.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo2.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img class="pop-up" src="/resources/img/logo11.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo5.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo4.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo7.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo12.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo9.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo8.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo10.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo1.jpg" alt="">
-        </div>
-        <div class="photo">
-            <img src="/resources/img/logo6.jpg" alt="">
-        </div>
-    </section>
+  
      <section class="recipes">
         <div class="row">
             <h2>Get Personalized Recipes</h2>
@@ -141,11 +101,11 @@
     <section class="testimonials">
         <div class="row">
             <div class="col span-1-of-2 plate-img">
-                <img src="/resources/img/plate.jpg" alt="Chef'd food on a plate">
+                <img src="resources/img/plate.jpg" alt="Chef'd food on a plate">
             </div>
             <div class="col span-1-of-2 user-rating">
                 <div class="cite">
-                    <cite><img src="/resources/img/user.jpg" alt="Chef'd content customer image">Sue M.</cite>
+                    <cite><img src="resources/img/user.jpg" alt="Chef'd content customer image">Sue M.</cite>
                 </div>
                 <div class="stars">
                     <i class="flaticon-star "></i>
@@ -171,7 +131,7 @@
         <div class="row">
             <div class="col span-1-of-3 box2">
                 <div class="arrival-photo">
-                    <img src="/resources/img/arrival-photo1.jpg" alt="Salmon dish photo">
+                    <img src="resources/img/arrival-photo1.jpg" alt="Salmon dish photo">
                 </div>
                 <div class="arrival-box">
                     <h3>Seared Branzino</h3>
@@ -179,12 +139,12 @@
                     <p class="long-text">
                         This delicious classic preparation is a favorite in Greek cuisine and is prominently featured at fam...
                     </p>
-                    <img src="/resources/img/cheflogo1.jpg" alt="">
+                    <img src="resources/img/cheflogo1.jpg" alt="">
                 </div>
             </div>
             <div class="col span-1-of-3 box2">
                 <div class="arrival-photo darker-photo">
-                    <img src="/resources/img/arrival-photo2.jpg" alt="Salmon dish photo">
+                    <img src="resources/img/arrival-photo2.jpg" alt="Salmon dish photo">
                 </div>
                 <div class="arrival-box">
                     <h3>Turkey Italian Susage</h3>
@@ -192,12 +152,12 @@
                     <p class="long-text">
                         This delicious classic preparation is a favorite in Greek cuisine and is prominently featured at fam...
                     </p>
-                    <img src="/resources/img/chefslogo2.jpg" alt="">
+                    <img src="resources/img/chefslogo2.jpg" alt="">
                 </div>
             </div>
             <div class="col span-1-of-3 box2">
                 <div class="arrival-photo">
-                    <img src="/resources/img/arrival-photo3.jpg" alt="Salmon dish photo">
+                    <img src="resources/img/arrival-photo3.jpg" alt="Salmon dish photo">
                 </div>
                 <div class="arrival-box">
                     <h3>Chicken Piccata</h3>
@@ -205,7 +165,7 @@
                     <p class="long-text">
                         This delicious classic preparation is a favorite in Greek cuisine and is prominently featured at fam...
                     </p>
-                    <img src="/resources/img/nigella_logo.png" alt="">
+                    <img src="resources/img/nigella_logo.png" alt="">
                 </div>  
             </div>
         </div>
@@ -217,27 +177,27 @@
         <ul class="instagram-gallery clearfix">
             <li>
                 <figure class="instagram-photo">
-                    <img src="/resources/img/4.jpg" alt="">
+                    <img src="resources/img/4.jpg" alt="">
                 </figure>
             </li>
             <li>
                 <figure class="instagram-photo">
-                    <img src="/resources/img/2.jpg" alt="">
+                    <img src="resources/img/2.jpg" alt="">
                 </figure>
             </li>
             <li>
                 <figure class="instagram-photo">
-                    <img src="/resources/img/3.jpg" alt="">
+                    <img src="resources/img/3.jpg" alt="">
                 </figure>
             </li>
             <li>
                 <figure class="instagram-photo">
-                    <img src="/resources/img/1.jpg" alt="">
+                    <img src="resources/img/1.jpg" alt="">
                 </figure>
             </li>
             <li>
                 <figure class="instagram-photo">
-                    <img src="/resources/img/5.jpg" alt="">
+                    <img src="resources/img/5.jpg" alt="">
                 </figure>
             </li>
         </ul>
@@ -246,7 +206,7 @@
         <div class="row">
             <div class="col span-1-of-2">
                 <figure class="iphone-photo">
-                    <img src="/resources/img/iPhone-App_Fall-1.png" alt="">
+                    <img src="resources/img/iPhone-App_Fall-1.png" alt="">
                 </figure>
             </div>
             <div class="col span-1-of-2" >
@@ -259,7 +219,7 @@
                     <input type="submit" name="Send" value="Send">
                 </form>
                 <div class="iphone-store">
-                    <img src="/resources/img/app-store.png" alt="App-store image">
+                    <img src="resources/img/app-store.png" alt="App-store image">
                     
                 </div>
             </div>
