Finished with Html and Css for desktop
All Html and Css is done, now to make it responsive and more interactive

--- a/index.html
+++ b/index.html
@@ -224,11 +224,35 @@
                 </div>
             </div>
         </div>
-
     </section>
-
-        
-    
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-links">
+                   <li><a href="#">About Us</a></li>
+                   <li><a href="#">Press</a></li>
+                   <li><a href="#">Company</a></li>
+                   <li><a href="#">Term</a></li>
+                   <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="col span-1-of-2">
+                 <ul class="social-links">
+                    <li><a href="#"><i class="fab fa-pinterest-p social"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube social"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram social"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter social"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f social"></i></a></li>
+                </ul>
+            </div>
+            <div class="row credits-box">
+                <p class="long-text credits">
+                        This webpage was created for the practice to aplay learned on the course "Design and Develop a Killer Website Using HTML5 and CSS3" by Jonas Schmedtmann.<a href="https://dribbble.com/shots/3320516-Chef-d-Website">Design by John Menard from Dribbble</a></p>
+                <p class="love">
+                    Build with <i class="fas fa-heart"></i> in the beautiful city of Banja Luka, BiH, 2018.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
-<br>
