--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <img src="resources/img/iPhone-App_Fall-1.png" alt="">
                 </figure>
             </div>
-            <div class="col span-1-of-2" >
+            <div class="col span-1-of-2 form-box" >
                 <div class="app-text">
                     <h3>Get the Chef'd App</h3>
                     <p class="long-text">Get instant access to recipes from celebrity chef's and world&ndash;renowened brands right in your pocket</p>
