--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col span-1-of-3 box">
                 <i class="flaticon-food-8 icon-big"></i>
                 <h3>Make Diner Like a Pro</h3>
-                <p class="long-text">Make a gourment meal any night of the week.Reorder what u like, when u like.No subscriptions necessary</p>
+                <p class="long-text">Make a gourment meal any night of the week.Reorder what u like, when u like.No subscriptions necessary.</p>
             </div>
         </div>
     </section>
